# hc-pictogram

./: .hc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
bar/: happ.yaml
baz/: dna.yaml
dnas/pics/workdir/: dna.yaml
dnas/pics/zomes/coordinator/file_storage/: Cargo.toml
dnas/pics/zomes/coordinator/pics/: Cargo.toml
dnas/pics/zomes/coordinator/pics/src/: comment.rs  lib.rs  my_pics.rs  pic.rs
dnas/pics/zomes/coordinator/pics/tests/: comment.rs  my_pics.rs  pic.rs
dnas/pics/zomes/coordinator/pics/tests/common/: mod.rs
dnas/pics/zomes/coordinator/profiles/: Cargo.toml
dnas/pics/zomes/integrity/file_storage/: Cargo.toml
dnas/pics/zomes/integrity/pics/: Cargo.toml
dnas/pics/zomes/integrity/pics/src/: comment.rs  lib.rs  pic.rs
foo/: web-happ.yaml
tests/src/: app-path.ts
tests/src/pics/file_storage/: setup.ts
tests/src/pics/pics/: comment.test.ts  my-pics.test.ts  pic.test.ts  setup.ts
tests/src/pics/profiles/: setup.ts
ui/: index.html  package.json
ui/src/: holochain-app.ts
ui/src/pics/pics/: context.ts  mocks.ts  pics-client.ts  pics-store.ts  types.ts
ui/src/pics/pics/elements/: comment-detail.ts  comment-summary.ts  comments-for-pic.ts  create-comment.ts  create-pic.ts  my-pics.ts  pic-detail.ts  pic-summary.ts
workdir/: happ.yaml  web-happ.yaml
