[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.3.6"
hdk = "=0.2.6"
serde = "=1.0.166"

[workspace.dependencies.holochain]
default-features = false
features = ["test_utils"]
version = "0.2.6"

[workspace.dependencies.profiles]
path = "dnas/pics/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/pics/zomes/integrity/profiles"
