[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.3.6"
hdk = "=0.2.6"
serde = "=1.0.166"

[workspace.dependencies.file_storage]
path = "dnas/pics/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/pics/zomes/integrity/file_storage"

[workspace.dependencies.holochain]
default-features = false
features = ["test_utils"]
version = "0.2.6"

[workspace.dependencies.pics]
path = "dnas/pics/zomes/coordinator/pics"

[workspace.dependencies.pics_integrity]
path = "dnas/pics/zomes/integrity/pics"

[workspace.dependencies.profiles]
path = "dnas/pics/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/pics/zomes/integrity/profiles"
